[HTML+CSS]boss直聘首页

--- a/[HTML+CSS+JS]快速实现漂亮登录注册页面/index.html
+++ b/[HTML+CSS+JS]快速实现漂亮登录注册页面/index.html
@@ -12,6 +12,7 @@
     <img src="./img/bc.jpg" alt="">
     <div class="panel">
       <div class="content login">
+        <span class="xxx">eBook电子商城</span>
         <div class="switch">
           <span id="login" class="active">Login</span>
           <span>/</span>
